--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "type-check": "tsc --noEmit",
+    "prebuild": "npm run lint && npm run type-check",
+    "verify": "npm run lint && npm run type-check && npm run build"
   },
   "dependencies": {
     "@supabase/ssr": "^0.1.0",
